--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,3 @@
-[/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/TopDownCPP/Maps/TopDownExampleMap
-EditorStartupMap=/Game/TopDownCPP/Maps/TopDownExampleMap
-GlobalDefaultGameMode=/Game/TopDownCPP/Blueprints/MyBomberGameMode.MyBomberGameMode_C
-GameInstanceClass=/Game/TopDownCPP/Blueprints/NewGameInstance.NewGameInstance_C
-
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_TopDown",NewGameName="/Script/Bomber")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_TopDown",NewGameName="/Script/Bomber")
@@ -77,3 +71,19 @@ AppliedDefaultGraphicsPerformance=Maximum
 +CollisionChannelRedirects=(OldName="Dynamic",NewName="WorldDynamic")
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/TopDownCPP/Maps/TopDownExampleMap.TopDownExampleMap
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Game/TopDownCPP/Blueprints/NewGameInstance.NewGameInstance_C
+GameDefaultMap=/Game/TopDownCPP/Maps/TopDownExampleMap.TopDownExampleMap
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/TopDownCPP/Blueprints/MyBomberGameMode.MyBomberGameMode_C
+GlobalDefaultServerGameMode=None
+
+
