Added Third AI + Spawning + Alpha Test Ready

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -73,7 +73,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TopDownCPP/Maps/TopDownExampleMap.TopDownExampleMap
+EditorStartupMap=/Game/TopDownCPP/Maps/Main_Menu.Main_Menu
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -81,9 +81,40 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/TopDownCPP/Blueprints/NewGameInstance.NewGameInstance_C
-GameDefaultMap=/Game/TopDownCPP/Maps/TopDownExampleMap.TopDownExampleMap
+GameDefaultMap=/Game/TopDownCPP/Maps/Main_Menu.Main_Menu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/TopDownCPP/Blueprints/MyBomberGameMode.MyBomberGameMode_C
 GlobalDefaultServerGameMode=None
 
-
+[/Script/GameplayDebugger.GameplayDebuggerConfig]
+ActivationKey=Apostrophe
+CategoryRowNextKey=Add
+CategoryRowPrevKey=Subtract
+CategorySlot0=NumPadZero
+CategorySlot1=NumPadOne
+CategorySlot2=NumPadTwo
+CategorySlot3=NumPadThree
+CategorySlot4=NumPadFour
+CategorySlot5=NumPadFive
+CategorySlot6=NumPadSix
+CategorySlot7=NumPadSeven
+CategorySlot8=NumPadEight
+CategorySlot9=NumPadNine
+DebugCanvasPaddingLeft=10.000000
+DebugCanvasPaddingRight=10.000000
+DebugCanvasPaddingTop=10.000000
+DebugCanvasPaddingBottom=10.000000
+-Categories=(CategoryName="AI",SlotIdx=1,ActiveInGame=UseDefault,ActiveInSimulate=UseDefault,bOverrideSlotIdx=False,InputHandlers=)
+-Categories=(CategoryName="BehaviorTree",SlotIdx=2,ActiveInGame=UseDefault,ActiveInSimulate=UseDefault,bOverrideSlotIdx=False,InputHandlers=)
+-Categories=(CategoryName="EQS",SlotIdx=-1,ActiveInGame=UseDefault,ActiveInSimulate=UseDefault,bOverrideSlotIdx=False,InputHandlers=)
+-Categories=(CategoryName="Navmesh",SlotIdx=0,ActiveInGame=UseDefault,ActiveInSimulate=UseDefault,bOverrideSlotIdx=False,InputHandlers=)
+-Categories=(CategoryName="Perception",SlotIdx=-1,ActiveInGame=UseDefault,ActiveInSimulate=Enable,bOverrideSlotIdx=False,InputHandlers=)
++Categories=(CategoryName="AI",SlotIdx=1,ActiveInGame=UseDefault,ActiveInSimulate=UseDefault,bOverrideSlotIdx=False,InputHandlers=)
++Categories=(CategoryName="BehaviorTree",SlotIdx=2,ActiveInGame=UseDefault,ActiveInSimulate=UseDefault,bOverrideSlotIdx=False,InputHandlers=)
++Categories=(CategoryName="EQS",SlotIdx=-1,ActiveInGame=UseDefault,ActiveInSimulate=UseDefault,bOverrideSlotIdx=False,InputHandlers=)
++Categories=(CategoryName="Navmesh",SlotIdx=0,ActiveInGame=UseDefault,ActiveInSimulate=UseDefault,bOverrideSlotIdx=False,InputHandlers=)
++Categories=(CategoryName="Perception",SlotIdx=-1,ActiveInGame=UseDefault,ActiveInSimulate=UseDefault,bOverrideSlotIdx=False,InputHandlers=)
+-Extensions=(ExtensionName="GameHUD",UseExtension=UseDefault,InputHandlers=((ConfigName="ToggleHUD",Key=Tilde,bModCtrl=True),(ConfigName="ToggleMessages",Key=Tab,bModCtrl=True)))
+-Extensions=(ExtensionName="Spectator",UseExtension=UseDefault,InputHandlers=((ConfigName="Toggle",Key=Tab)))
++Extensions=(ExtensionName="GameHUD",UseExtension=UseDefault,InputHandlers=((ConfigName="ToggleHUD",Key=Tilde,bModCtrl=True),(ConfigName="ToggleMessages",Key=Tab,bModCtrl=True)))
++Extensions=(ExtensionName="Spectator",UseExtension=UseDefault,InputHandlers=((ConfigName="Toggle",Key=Tab)))
